# ChangeLog for media-sound/rosegarden
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.82 2011/01/13 15:28:31 ssuominen Exp $

*rosegarden-10.10 (13 Jan 2011)

  13 Jan 2011; Samuli Suominen <ssuominen@gentoo.org> +rosegarden-10.10.ebuild:
  Version bump.

*rosegarden-10.04.2 (24 Oct 2010)

  24 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  +rosegarden-10.04.2.ebuild:
  Version bump.

  24 Oct 2010; Brent Baude <ranger@gentoo.org> rosegarden-10.04.ebuild:
  Marking rosegarden-10.04 ppc for bug 329675

  30 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  rosegarden-10.04.ebuild:
  Stable on amd64 wrt bug #329675

  24 Jul 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rosegarden-10.04.ebuild:
  x86 stable wrt bug #329675

  23 May 2010; <nixnut@gentoo.org> rosegarden-10.02.1.ebuild:
  ppc stable #316783

  10 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rosegarden-10.02.1.ebuild:
  x86 stable wrt bug #316783

  06 May 2010; Samuli Suominen <ssuominen@gentoo.org>
  rosegarden-10.02.1.ebuild:
  amd64 stable wrt #316783

  28 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  rosegarden-10.04.ebuild:
  Fix building with USE="-lirc" when lirc is installed wrt #317605.

*rosegarden-10.04 (28 Apr 2010)

  28 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  +rosegarden-10.04.ebuild:
  Version bump.

*rosegarden-10.02.1 (22 Feb 2010)

  22 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +rosegarden-10.02.1.ebuild:
  Version bump.

*rosegarden-10.02 (15 Feb 2010)

  15 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +rosegarden-10.02.ebuild, +files/rosegarden-10.02-configure.ac.patch:
  Version bump. Thanks to Alexis Ballier for reporting.

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org>
  rosegarden-10.02_beta.ebuild:
  Marked ppc stable for bug #298440.

  29 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  rosegarden-10.02_beta.ebuild: