@@ -1,8 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST rosegarden-10.04.2.tar.bz2 5909808 RMD160 fd4b74e4fc77ec7e2db43e2ba4ce1c1740c6ecae SHA1 30251f9783693211e096d28014fcbc3a0794d920 SHA256 3bf680fa117553997f476c48b252b50f5ccbc745c9cdfd4d3fb168496b86332f
 DIST rosegarden-10.04.tar.bz2 5926499 RMD160 8a5406ec5ab0a08701748a8261410018790ec65b SHA1 dd81e94ddf43464b0f04ee421a88ae08d0a49f5a SHA256 ee48f59c32d2773413a2450607db4a89b3b4437b3c2d7f166a6997306650cfdf
 DIST rosegarden-10.10.tar.bz2 5748328 RMD160 660a2ec9c1a4475f6222758e6a591ab78b9be495 SHA1 44b2fd5ae32cdfd5a852fc46aa0585465d162548 SHA256 0924dc136dd0e4a3352370449b8349c2339848672c5382111cd9073eff2447c5
+DIST rosegarden-11.02.tar.bz2 5818771 RMD160 497cd725c5c8cd1d986fad9eb88bb448d3085819 SHA1 d6f506237ae2bda2b9792e8dabcdf9c560583571 SHA256 d9aee73936c2bf5efb0dc184a8c54089bc012e8c0b7a68fd2526ef9f67098193
 EBUILD rosegarden-10.04.2.ebuild 1438 RMD160 61171474cfd49b212b0f7fa3b357567023010568 SHA1 aafe8ecd0f50b92d88b9e7e25304328455b7c918 SHA256 4d899c76831e576a7ebd60c21fe2a090183d51f43e09a6c556979de09694f970
 EBUILD rosegarden-10.04.ebuild 1430 RMD160 b6d930815031fb06a5aff9d12592f55ce70895e7 SHA1 8f09c1e881f0bab122fa2252aa2721f52f556270 SHA256 d20e021642da86b5966d705f4e0eb45600c9d49753606af7ce0e6fccfab3d03a
 EBUILD rosegarden-10.10.ebuild 1504 RMD160 151b5e5e810d05232289e0ffc7103f484121a826 SHA1 27a1fcee7e86c2600e2cff3637062b1f8c1f9e9c SHA256 2bde3c888aa95999316d4d88a80a2bf92d8ce4fbc49237bfc0de14f1d652c20f
-MISC ChangeLog 12532 RMD160 c655323d506efd44479d135fcd0133e45453d3b9 SHA1 619e6cdaff300418ad7a76a64bf015195217e3a0 SHA256 925eb7bfd7a04c3f8f9b73ab5b782e93335067e10d7196f63f6ae9e17bf068ab
+EBUILD rosegarden-11.02.ebuild 1504 RMD160 2b0792ede2cfe2de400ea7824c1a4294087aedd6 SHA1 9e00aea906082d058e4b11da3faca939f775c2ec SHA256 f9775eb36af183d154b5060ab4c3643f6dc414596f8655d9cebf0d21c6e99596
+MISC ChangeLog 12657 RMD160 c50dec05d12231c87c177e76ccab16863d711193 SHA1 3b48d188641bd1258e8f4f31e4b9c8ab079ccc1a SHA256 9819f41afb726cbc3c03879d31f3a482be28364164513a3b4b18028ad66b14a9
 MISC metadata.xml 163 RMD160 c2b208c0913f8c5bd1148627b5c3c9e37b53060a SHA1 4195ac5ca8352b0f52be6ed92640e4365be5bf0d SHA256 39a67c65d2e7583b6ee9e20fcab1fd821e28c51134eb2f76a7fe0598a2c2b4cb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQEcBAEBAgAGBQJNcsoSAAoJEEqz6FtPBkyjJdUIAIiGcFS7DBTqrwhY0fFzSCKv
+o4bvEM8Nw5UN1Veirk7rclsR6KB+WViFrGjy3vzDMmbY9fpXv/NrH0gBVC8JvPnf
+/jwc748nZg4PQmmRXLojcy9OooOtHEnsDEaFo+M95Du7lQ3m+ofEGBrfVKPjOPl0
+3HutaJ8/XnFQ2AFuZ3m2pcdup43HARfai8Q9tW8uPTiOJgXpgdTDEoXLkDMqBzOx
+UdqAPHKQtQjBPO1wS1e8Zq15b4YPI9P/G5lSDw/WBg4tmDx72P84lq9y0lHUXMEG
+T0P1CbwlDx+nXEnhq92FAeGX2h5+M7YuGYsAYOda2S4Fo31ltiNYmWl7GyX8VlU=
+=7Qbe
+-----END PGP SIGNATURE-----
