@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/rosegarden
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.82 2011/01/13 15:28:31 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/rosegarden/ChangeLog,v 1.83 2011/03/05 23:40:57 radhermit Exp $
+
+*rosegarden-11.02 (05 Mar 2011)
+
+  05 Mar 2011; Tim Harder <radhermit@gentoo.org> +rosegarden-11.02.ebuild:
+  Version bump.
 
 *rosegarden-10.10 (13 Jan 2011)
 
